small bug in the dropdown menu fixed with z-index

--- a/app/javascript/stylesheets/styles.scss
+++ b/app/javascript/stylesheets/styles.scss
@@ -26,6 +26,8 @@ $sides: (top, bottom, left, right);
   
 }
 
+
+
 .is-horizontal-center {
   justify-content: center;
 }
@@ -41,5 +43,6 @@ $sides: (top, bottom, left, right);
 
 }
 
-#zeta {
+.patras {
+  z-index: 1;
 }
